<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.PersonActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/controlshow"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@color/controlshow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1sp"
            android:gravity="center|right">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="50sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@color/nullo"
                android:text="@string/ac_person_register_btn"
                android:textColor="@drawable/btn_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:text="@string/ac_person_iPhone_tv"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_iphone"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginLeft="20sp"
                android:background="@color/nullo"
                android:hint="@string/ac_person_iPhone_et"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:text="@string/ac_person_height_tv"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginLeft="20sp"
                android:background="@color/nullo"
                android:hint="@string/ac_person_height_et"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:text="@string/ac_person_weight_tv"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginLeft="20sp"
                android:background="@color/nullo"
                android:hint="@string/ac_person_weight_et"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:text="@string/ac_person_sex_tv"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginLeft="20sp"
                android:background="@color/nullo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_setting"
                android:text="@string/ac_person_save_btn"
                android:textColor="@drawable/btn_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>