<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:gravity="center"
            android:text="@string/ac_operation_follow_btn"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="15sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:text="@string/dialog_left_tv"
                android:textColor="@color/controlshow"
                android:textSize="18sp" />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/dialog_right_tv"
                android:textColor="@color/controlshow"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="15sp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_angle_tv"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:background="@drawable/et_send"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_angle_left"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/controlshow"></View>

                <EditText
                    android:id="@+id/et_angle_right"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="15sp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_moment_tv"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:background="@drawable/et_send"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_moment_left"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/controlshow"></View>

                <EditText
                    android:id="@+id/et_moment_right"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:visibility="invisible"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_a"
                android:layout_width="15sp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_factor_tv"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:background="@drawable/et_send"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_factor_left"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"

                    android:background="@color/controlshow"></View>

                <EditText
                    android:id="@+id/et_factor_right"
                    android:layout_width="80sp"
                    android:layout_height="30sp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number|numberDecimal"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_cut_tv"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_voluntarily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dialog_voluntarily_rd"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_manual_operation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/dialog_manual_operation_rd"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
