<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/ac_operation_fixed_btn"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_left_tv"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:layout_marginLeft="5sp"/>

        <SeekBar
            android:id="@+id/sk_left"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:max="10"
            android:progress="0"
           />

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="15sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_n_tv"
            android:textSize="20sp"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_right_tv"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="5sp"
            android:textColor="@color/blue"/>

        <SeekBar
            android:id="@+id/sk_right"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_n_tv"
            android:textSize="20sp"
            android:textColor="@color/blue"/>
    </LinearLayout>
</LinearLayout>
