<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/controlshow"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@color/controlshow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="1sp">

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl__main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/split"
        android:layout_below="@+id/title"></RelativeLayout>

    <View
        android:id="@+id/split"
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_above="@+id/rg"
        android:background="#646060"></View>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/bg_home"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/ac_home_page_rd"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/rb_shop"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/bg_company"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/ac_shop_rd"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/bg_mine"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/ac_mine_rd"
            android:textSize="12sp" />
    </RadioGroup>
</RelativeLayout>